# scm-archiver

./: .gitignore  pyproject.toml
scm_archiver/: main.py
